# ai-notes

./: .readthedocs.yaml  README.md  pyproject.toml
.github/workflows/: deploy-book.yml  deploy-notes.yml
ai-notes/: 0-intro.md  1-overview.md  _config.yml  _toc.yml  conditional-1.md  conditional-2.md  discriminative-1.md  discriminative-2.md  generative-1.md
single-decision-making/: 1-overview.md  _config.yml  _toc.yml  discriminative-1.md  discriminative-2.md
